this kits are fixed so we moved them to the rest of the working kits